--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,6 +1,6 @@
 <link rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' />
 <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIwAXajaeE125I4VEYGxGmbzGjHRwfLwQ&amp;libraries=places"></script>
+<!--script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIwAXajaeE125I4VEYGxGmbzGjHRwfLwQ&amp;libraries=places"></script-->
 <style>
   html {
     font-size: 16px;
